ir/tests/snapshots/snapshot_tests__normalize_repeat.snap
---
source: ir/tests/snapshot_tests.rs
expression: render_rules(&grammar)
---
  Symbol(10) -> NonTerminal(SymbolId(1010))
  Symbol(1010) -> Epsilon
  Symbol(1010) -> NonTerminal(SymbolId(1010)) Terminal(SymbolId(1))
