ir/tests/snapshots/snapshot_tests__normalize_simple.snap
---
source: ir/tests/snapshot_tests.rs
expression: render_rules(&grammar)
---
  Symbol(10) -> Terminal(SymbolId(1))
